13650 sendmail: writing 1 byte into a region of size 0 Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>